[package]
name = "arachne"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
ipnet = "2"
tokio = { version = "1", features = ["full"] }
kube = { version = "0.98", features = ["client"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
rtnetlink = "0.14"
nix = { version = "0.29", features = ["sched"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"
