[workspace]
members = [".", "arachne-ebpf", "arachne-common"]
default-members = ["."]
resolver = "2"

[package]
name = "arachne"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
ipnet = "2"
tokio = { version = "1", features = ["full"] }
kube = { version = "0.98", features = ["client", "runtime"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
rtnetlink = "0.14"
netlink-packet-route = "0.19"
nix = { version = "0.29", features = ["sched", "mount"] }
futures = "0.3"
aya = "0.13"
arachne-common = { path = "arachne-common", features = ["user"] }

[dev-dependencies]
tempfile = "3"
